# aposd-snake

./: CONTRIBUTING.md  README.md  pyproject.toml  todos
snake/: clock.py  dialogue_master.py  draw.py  game_dialogue.py  idialogue.py  main.py  world.py
snake/dialogues/: game_dialogue.py  gameover_dialogue.py  welcome_dialogue.py
