[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "aposd-snake"
version = "0.0.1"
dependencies = []

requires-python = ">=3.8"
description = "Play a snake game."
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]

[project.urls]
Repository = "https://github.com/me/spam.git"

[project.scripts]
aposd-snake = "snake.main:main"
